--- a/FoodManChu/Base.lproj/Main.storyboard
+++ b/FoodManChu/Base.lproj/Main.storyboard
@@ -417,17 +417,17 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryCell" textLabel="V46-Nr-sa4" style="IBUITableViewCellStyleDefault" id="3os-F4-Wop">
-                                <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryCell" textLabel="V46-Nr-sa4" rowHeight="50" style="IBUITableViewCellStyleDefault" id="3os-F4-Wop">
+                                <rect key="frame" x="0.0" y="44.5" width="414" height="50"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="3os-F4-Wop" id="meb-ms-lVE">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="V46-Nr-sa4">
-                                            <rect key="frame" x="20" y="0.0" width="374" height="43.5"/>
+                                            <rect key="frame" x="20" y="0.0" width="374" height="50"/>
                                             <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="15"/>
+                                            <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -717,11 +717,11 @@
                     <size key="freeformSize" width="414" height="1271"/>
                     <connections>
                         <outlet property="recipeCategory" destination="398-ZE-3xH" id="wGp-d0-KEr"/>
-                        <outlet property="recipeDescripton" destination="UtE-yO-hIU" id="IDz-Tg-d4N"/>
+                        <outlet property="recipeDescription" destination="UtE-yO-hIU" id="IDz-Tg-d4N"/>
                         <outlet property="recipeDirections" destination="hUv-Xl-phj" id="uga-mj-WJZ"/>
                         <outlet property="recipeIngredientList" destination="bpD-RP-sOj" id="3Jx-tc-NTP"/>
                         <outlet property="recipeName" destination="H6X-yY-y7j" id="S5z-Y7-PtT"/>
-                        <outlet property="recipeTime" destination="F2m-Lj-WJn" id="Avj-ph-sWk"/>
+                        <outlet property="recipePrepTime" destination="F2m-Lj-WJn" id="Avj-ph-sWk"/>
                         <outlet property="thumb" destination="7Lb-86-nzd" id="kDt-xK-68x"/>
                         <segue destination="P0U-WW-Sed" kind="show" identifier="SegueAddEditRecipe" id="aW6-XB-bVo"/>
                     </connections>
@@ -1013,7 +1013,7 @@
     <inferredMetricsTieBreakers>
         <segue reference="Z6r-g4-HoF"/>
         <segue reference="YVA-DB-Zhd"/>
-        <segue reference="aW6-XB-bVo"/>
+        <segue reference="QL0-aD-1uF"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="clock" catalog="system" width="128" height="121"/>
